Version 2.6.0 - August 15, 2019
================================================================================

Add support for PostgreSQL Interval column type

Version 2.5.0 - July 05, 2019
================================================================================

Add handling for null PostgreSQL Range column values.

Add PostgreSQL UUID ARRAY support.

Allow the Configuration to be accessed by all custom Types.

Version 2.4.4 - June 06, 2019
================================================================================

Update Javadoc to specify which JSON types are suitable for PostgreSQL and MySQL.

Add ZoneIdType to map the java.time.ZoneId to a VARCHAR-based column.

Replace reflection usage in PostgreSQL Types with Driver-specific API calls.

In case the JSON attribute is a java.util.Set, an additional SQL UPDATE is executed when persisting the entity.

Version 2.4.3 - April 07, 2019
================================================================================

Adjustment in ZoneDateTime pattern for 1-6 nanoseconds digits.

Array types use a singleton Java descriptors and that prevents them from being
initialized separately using dynamic parameters.

Version 2.4.2 - February 26, 2019
================================================================================

Add a LongArrayType to support long[] array mappings.

Version 2.4.1 - February 01, 2019
================================================================================

Fix issue with ZonedDateTimeRanges and DST.

Change constructor type args from Class to Type for JSON Types so it's easier to register them dynamically.

Version 2.4.0 - January 02, 2019
================================================================================

Add support for HStore and Range PostgreSQL column types.

Version 2.3.5 - December 03, 2018
================================================================================

Add EnumArrayType to support mapping database Enums as Java arrays.
