@@ -33,6 +33,8 @@ import java.sql.Types;
  */
 public class PostgreSQLRangeType extends ImmutableType<Range> {
 
+    public static final PostgreSQLRangeType INSTANCE = new PostgreSQLRangeType();
+
     public PostgreSQLRangeType() {
         super(Range.class);
     }
